--- a/src/Style.css
+++ b/src/Style.css
@@ -13,6 +13,12 @@ html{
 .Logo {
   width: 28rem;
 }
+
+.LogoMainScreen{
+  
+  width: 16rem;
+}
+
 p{
   margin: 1px;
 }
@@ -56,3 +62,32 @@ Main{
   border : solid 2px black;
   border-radius: 3px;
 }
+
+
+
+.UserChallengeListBoarder{
+  background: white;
+  display: flex;
+  flex-direction: column-reverse;
+  width: 512px;
+  height: 200px;
+  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23); /* 그림자 */ 
+  margin: 0 auto; /* 페이지 중앙 정렬 */
+  margin-top: 4rem;
+}
+
+.UserChallengeList-button{
+    width:100px;
+    background-color: #f8585b;
+    border: none;
+    color:#fff;
+    padding: 15px 0;
+    text-align: right;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 15px;
+    margin: 4px;
+    cursor: pointer;
+
+}
+
