--- a/src/Style.css
+++ b/src/Style.css
@@ -88,3 +88,16 @@ Main{
     cursor: pointer;
 
 }
+
+.HomeElementCircleYellow{
+  width: 30;
+    height: 30;
+    border-radius: 25;
+    background-color: yellow;
+}
+.HomeElementCircleRed{
+  width: 30;
+  height: 30;
+  border-radius: 25;
+  background-color: red;
+}
